--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.7.1",
     "swiper": "^9.1.1"
   }
 }
